--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -73,9 +73,54 @@
 		</div>
 		{% endfor %}
 	</div>
+
+	
 </section>
 
 <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
+<br>
+<br>
+<button
+    type="button"
+    id="delete-venue"
+    class="btn btn-danger"
+    data-id="{{ venue.id }}" >
+    Delete Venue
+  </button>
+
+
+<script>
+	// 	const request = (url, method = 'GET',) =>
+	//   fetch(url, {
+	//     method,
+	//     headers: {
+	//       'Content-Type': 'application/json',
+	//     }
+	//   });
+	
+	const venueDeleteButton = document.querySelector('#delete-venue');
+	// const artistDeleteButton = document.querySelector('#artist-del-btn');
+	
+	  venueDeleteButton.addEventListener('click', event => {
+		event.preventDefault();
+		const {id} = event.target.dataset;
+
+		fetch('/venues/' + id, {
+			method: 'DELETE'
+		});
+		  window.location.assign('/');
+	  });
+	
+
+	//   artistDeleteButton.addEventListener('click', event => {
+	// 	event.preventDefault();	
+	// 	const {id} = event.target.dataset;
+
+	// 	fetch('/artists/' + id, {
+	// 		method: 'DELETE'
+	// 	});
+	//   });
+	
+	</script>
 
 {% endblock %}
-
